force-app/main/default/objects/FEC_Notification__c/FEC_Notification__c.object-meta.xml
<CustomObject>
    <description>Bảng dữ liệu chứa thông tin tùy chỉnh của Notification</description>
    <label>Notifications</label>
    <nameField>
        <label>Notification Type</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Notifications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>