force-app/main/default/objects/FEC_Notification__c/fields/FEC_Applicable_Roles__c.field-meta.xml
<CustomField>
    <fullName>FEC_Applicable_Roles__c</fullName>
    <description>Đối tượng người dùng được sử dụng thông báo</description>
    <label>Applicable Roles</label>
    <length>255</length>
    <type>Text</type>
</CustomField>