force-app/main/default/objects/FEC_Notification__c/fields/FEC_Applicable_User_Groups__c.field-meta.xml
<CustomField>
    <fullName>FEC_Applicable_User_Groups__c</fullName>
    <description>Người dùng có thể sử dụng thông báo thủ công</description>
    <label>Applicable User Groups</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>User_Group</valueSetName>
    </valueSet>
</CustomField>