force-app/main/default/objects/FEC_Notification__c/fields/FEC_Assigned_to_Queue__c.field-meta.xml
<CustomField>
    <fullName>FEC_Assigned_to_Queue__c</fullName>
    <description>Thông tin Queue mà Case được chuyển đến để làm điều kiện gửi Email</description>
    <label>Assigned to Queue</label>
    <length>255</length>
    <type>Text</type>
</CustomField>