force-app/main/default/objects/FEC_Notification__c/fields/FEC_Case_Stage__c.field-meta.xml
<CustomField>
    <fullName>FEC_Case_Stage__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Thông tin Stage hiển thị thông báo cho người dùng trên giao diện Case</description>
    <label>Case Stage</label>
    <referenceTo>FEC_Case_Stage__c</referenceTo>
    <relationshipName>Notifications</relationshipName>
    <type>Lookup</type>
</CustomField>