force-app/main/default/objects/FEC_Notification__c/fields/FEC_Changed_Status__c.field-meta.xml
<CustomField>
    <fullName>FEC_Changed_Status__c</fullName>
    <description>Trạng thái mới của Case sẽ được cập nhật</description>
    <label>Changed Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>