force-app/main/default/objects/FEC_Notification__c/fields/FEC_Channel__c.field-meta.xml
<CustomField>
    <fullName>FEC_Channel__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Kênh được khai thác dữ liệu</description>
    <label>Channel</label>
    <referenceTo>FEC_Channel__c</referenceTo>
    <relationshipName>Notifications</relationshipName>
    <type>Lookup</type>
</CustomField>