force-app/main/default/objects/FEC_Notification__c/fields/FEC_Create_Or_Edit__c.field-meta.xml
<CustomField>
    <fullName>FEC_Create_Or_Edit__c</fullName>
    <formula>NOT(ISBLANK(Id))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is in Create mode or Edit mode</label>
    <type>Checkbox</type>
</CustomField>