force-app/main/default/objects/FEC_Notification__c/fields/FEC_Current_Status__c.field-meta.xml
<CustomField>
    <fullName>FEC_Current_Status__c</fullName>
    <description>Ghi nhận trạng thái cũ của Case – dùng làm điều kiện kích hoạt thông báo tự động</description>
    <label>Current Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Case_Status</valueSetName>
    </valueSet>
</CustomField>