force-app/main/default/objects/FEC_Notification__c/fields/FEC_Notification_Channel__c.field-meta.xml
<CustomField>
    <fullName>FEC_Notification_Channel__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Kênh gửi thông báo</description>
    <label>Notification Channel</label>
    <referenceTo>FEC_Notification_Channel__c</referenceTo>
    <relationshipName>FEC_Notification_Setting</relationshipName>
    <type>Lookup</type>
</CustomField>