force-app/main/default/objects/FEC_Notification__c/fields/FEC_Notification_Status__c.field-meta.xml
<CustomField>
    <fullName>FEC_Notification_Status__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Trạng thái của thông báo</description>
    <label>Notification Status</label>
    <type>Checkbox</type>
</CustomField>