force-app/main/default/objects/FEC_Notification__c/fields/FEC_Notification_Template__c.field-meta.xml
<CustomField>
    <fullName>FEC_Notification_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Notification Template</label>
    <referenceTo>FEC_Template__c</referenceTo>
    <relationshipLabel>Notifications</relationshipLabel>
    <relationshipName>Notifications</relationshipName>
    <type>Lookup</type>
</CustomField>