force-app/main/default/objects/FEC_Notification__c/fields/FEC_Product_Type__c.field-meta.xml
<CustomField>
    <fullName>FEC_Product_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Thông tin loại sản phẩm</description>
    <label>Product Type</label>
    <referenceTo>FEC_Product_Type__c</referenceTo>
    <relationshipName>FEC_Notification_Settings</relationshipName>
    <type>Lookup</type>
</CustomField>