force-app/main/default/objects/FEC_Notification__c/fields/FEC_Receivers__c.field-meta.xml
<CustomField>
    <fullName>FEC_Receivers__c</fullName>
    <description>Thông tin Email của người dùng nội bộ nhận thông báo</description>
    <label>Receivers</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>