force-app/main/default/objects/FEC_Notification__c/fields/FEC_Schedule_End_Time__c.field-meta.xml
<CustomField>
    <fullName>FEC_Schedule_End_Time__c</fullName>
    <description>Giờ kết thúc gửi thông báo trong ngày</description>
    <label>Schedule End Time</label>
    <type>Time</type>
</CustomField>