force-app/main/default/objects/FEC_Notification__c/fields/FEC_Schedule_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>FEC_Schedule_Start_Time__c</fullName>
    <description>Giờ bắt đầu gửi thông báo trong ngày</description>
    <label>Schedule Start Time</label>
    <type>Time</type>
</CustomField>