force-app/main/default/objects/FEC_Notification__c/fields/FEC_Sub_Category__c.field-meta.xml
<CustomField>
    <fullName>FEC_Sub_Category__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Thông tin danh mục phụ</description>
    <label>Sub Category</label>
    <referenceTo>FEC_Sub_Category__c</referenceTo>
    <relationshipLabel>Notifications</relationshipLabel>
    <relationshipName>FEC_Notification_Settings</relationshipName>
    <type>Lookup</type>
</CustomField>