force-app/main/default/objects/FEC_Notification__c/fields/FEC_Sub_Code__c.field-meta.xml
<CustomField>
    <fullName>FEC_Sub_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Thông tin danh mục con</description>
    <label>Sub Code</label>
    <referenceTo>FEC_Sub_Code__c</referenceTo>
    <relationshipLabel>Notifications</relationshipLabel>
    <relationshipName>FEC_Notification_Settings</relationshipName>
    <type>Lookup</type>
</CustomField>