force-app/main/default/objects/FEC_Notification__c/fields/FEC_SubCategory__c.field-meta.xml
<CustomField>
    <fullName>FEC_SubCategory__c</fullName>
    <label>Sub Category</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>