force-app/main/default/objects/FEC_Notification__c/fields/FEC_Target_Group__c.field-meta.xml
<CustomField>
    <fullName>FEC_Target_Group__c</fullName>
    <description>Đối tượng áp dụng (khách hàng hoặc người dùng nội bộ)</description>
    <label>Target Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Target_Group</valueSetName>
    </valueSet>
</CustomField>