force-app/main/default/objects/FEC_Notification__c/recordTypes/Auto_Notification.recordType-meta.xml
<RecordType>
    <fullName>Auto_Notification</fullName>
    <active>true</active>
    <description>Giao diện thông báo tự động</description>
    <label>Auto Notification</label>
</RecordType>