force-app/main/default/objects/FEC_Notification__c/recordTypes/Manual_Notification.recordType-meta.xml
<RecordType>
    <fullName>Manual_Notification</fullName>
    <active>true</active>
    <description>Giao diện thông báo thủ công</description>
    <label>Manual Notification</label>
</RecordType>