force-app/main/default/objects/FEC_Notification__c/listViews/All_Notifications.listView-meta.xml
<ListView>
    <fullName>All_Notifications</fullName>
    <columns>NAME</columns>
    <columns>FEC_Target_Group__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Notifications</label>
</ListView>