force-app/main/default/objects/FEC_Notification__c/listViews/Auto_Notification_for_Customer.listView-meta.xml
<ListView>
    <fullName>Auto_Notification_for_Customer</fullName>
    <columns>NAME</columns>
    <columns>FEC_Target_Group__c</columns>
    <columns>FEC_Customer_Type__c</columns>
    <columns>FEC_Product_Type__c</columns>
    <columns>FEC_Category__c</columns>
    <columns>FEC_Sub_Category__c</columns>
    <columns>FEC_Sub_Code__c</columns>
    <columns>FEC_Notification_Status__c</columns>
    <columns>FEC_Notification_Channel__c</columns>
    <columns>FEC_Notification_Template__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>FEC_Notification__c.Auto_Notification</value>
    </filters>
    <filters>
        <field>FEC_Target_Group__c</field>
        <operation>equals</operation>
        <value>Customer</value>
    </filters>
    <label>Auto Notification for Customer</label>
</ListView>