force-app/main/default/objects/FEC_Notification__c/listViews/Manual_Notification_for_Customer.listView-meta.xml
<ListView>
    <fullName>Manual_Notification_for_Customer</fullName>
    <columns>NAME</columns>
    <columns>FEC_Target_Group__c</columns>
    <columns>FEC_Customer_Type__c</columns>
    <columns>FEC_Product_Type__c</columns>
    <columns>FEC_Category__c</columns>
    <columns>FEC_SubCategory__c</columns>
    <columns>FEC_SubCode__c</columns>
    <columns>FEC_Notification_Status__c</columns>
    <columns>FEC_Notification_Channel__c</columns>
    <columns>FEC_Notification_Template__c</columns>
    <columns>FEC_Channel__c</columns>
    <columns>FEC_Applicable_User_Groups__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>FEC_Notification__c.Manual_Notification</value>
    </filters>
    <filters>
        <field>FEC_Target_Group__c</field>
        <operation>equals</operation>
        <value>Customer</value>
    </filters>
    <label>Manual Notification for Customer</label>
</ListView>