force-app/main/default/objects/FEC_Notification__c/listViews/Manual_Notification_for_Internal_User.listView-meta.xml
<ListView>
    <fullName>Manual_Notification_for_Internal_User</fullName>
    <columns>NAME</columns>
    <columns>FEC_Target_Group__c</columns>
    <columns>FEC_Product_Type__c</columns>
    <columns>FEC_Category__c</columns>
    <columns>FEC_Notification_Status__c</columns>
    <columns>FEC_Schedule_Start_Time__c</columns>
    <columns>FEC_Schedule_End_Time__c</columns>
    <columns>FEC_Channel__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>FEC_Notification__c.Manual_Notification</value>
    </filters>
    <filters>
        <field>FEC_Target_Group__c</field>
        <operation>equals</operation>
        <value>Internal User</value>
    </filters>
    <label>Manual Notification for Internal User</label>
</ListView>